--- a/fixit7StringValGamon.project
+++ b/fixit7StringValGamon.project
@@ -18,8 +18,8 @@
           "!type": "External",
           "file": [
             "forms",
-            "Form1",
-            "Form1.json"
+            "stringMethods",
+            "stringMethods.json"
           ]
         }
       ],
