--- a/fixit7StringValGamon.project
+++ b/fixit7StringValGamon.project
@@ -39,7 +39,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "Form1",
+      "firstform": "stringMethods",
       "fontFamily": "system",
       "homescreenTitle": "",
       "icon": "nsb/images/192.png",
